fix: Address 5 SonarQube issues
Fixed issues:
- AZjRjduY592amupb0FPG for java:S1130 rule
- AZmEP142bmPIH7Bq_J8p for java:S1874 rule
- AZjr5wG89TChwHguyc60 for java:S1874 rule
- AZjr5wG89TChwHguyc6x for java:S1874 rule
- AZjr5wG89TChwHguyc6y for java:S1874 rule

Generated by SonarQube Agent (task: 4deeb420-9b4e-4c3f-8837-89ba2378e617)